Bug 1692497 - Resize the message security popup and enable overflow for content scrolling. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D125483

--HG--
extra : amend_source : 0384fca438d8735e2825820c4499b498e3de5a44

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -607,6 +607,12 @@ mail-headerfield:focus-visible:not(:hover) {
   width: 34rem;
 }
 
+#messageSecurityPanel .security-panel-body {
+  overflow-x: hidden;
+  -moz-box-flex: 1;
+  padding-inline: 6px;
+}
+
 html|header.message-security-header {
   display: flex;
   flex-wrap: nowrap;
@@ -618,6 +624,11 @@ html|header.message-security-header {
 html|header.message-security-header html|h3 {
   flex: 1;
   margin-block: 0;
+}
+
+.message-security-body {
+  overflow-y: auto;
+  -moz-box-flex: 1;
 }
 
 .message-security-body > description {
@@ -693,8 +704,6 @@ html|header.message-security-header html|h3 {
 
 #otherEncryptionKeysList {
   margin: 9px 6px;
-  max-height: 30rem;
-  overflow-y: auto;
 }
 
 .other-key-row {
